Closed Bug 1587155 Opened 6 years ago Closed 6 years ago

Color fringing/image corruption on Windows provided driver 22.19.162.4 for Radeon RX 560

Categories

(Core :: Graphics: WebRender, defect, P2)

69 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox69 - wontfix
firefox70 + fixed
firefox71 - fixed

People

(Reporter: yoasif, Assigned: Gankra)

References

Details

Attachments

(5 files)

Attached image JA7oqKt.png

Reported on reddit: https://www.reddit.com/r/firefox/comments/ddidht/firefox_greenpink_textimages_glitch_how_do_i_fix/

The driver seems to be the latest provided by Windows Update. Updating the driver to the latest provided by the vendor seems to resolve the issue.

Attached image 2cZO5TG.png
Attached image 0pYG0z3.png
Attached file about:support
Blocks: wr-70

[Tracking Requested - why for this release]:

WebRender on AMD is enabled by default now in release, Windows Update driver is affected.

Blocks: wr-amd

We have RX 460 that we'll try to reproduce it on.

This looks like the return of Bug 1565663, which we also failed to reproduce with the RX 460.

Last time we closed it after the user updated their ~2017 driver and it went away. It seems the exact same thing happened here.

Also interesting is that in the old version, it was actually happening regardless of Webrender (for some users?).

See Also: → 1565663

In that previous report it was also Driver 22.19.162.4, which suggests we should maybe blacklist this exact driver?

Hey darkspirit, you were able to reproduce some of the similar issues reported, right? Or were those just A Different But Similar Bug?

Flags: needinfo?(jan)

Too late to do anything about it in 69 at this point.

Likely too late for 70 as well unless we can figure out specific drivers to block.
Jessie, can you help find someone to investigate?

Flags: needinfo?(jbonisteel)

Alexis, can you write a patch to block 22.19.162.4? Sounds like at least a good interim solution

Flags: needinfo?(jbonisteel) → needinfo?(a.beingessner)
Priority: -- → P2

PSA: I've never blocklisted a driver before, so not 100% sure if this is right, but this is the basic idea at least.

Flags: needinfo?(a.beingessner)
Pushed by abeingessner@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f2502597e034 Block all hardware acceleration for AMD driver 22.19.162.4. r=jrmuizel
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → a.beingessner

So we want to uplift this to 70?

Flags: needinfo?(lhenry)

I think so. Can you request the uplift?

Flags: needinfo?(lhenry)

Comment on attachment 9100291 [details]
Bug 1587155 - Block all hardware acceleration for AMD driver 22.19.162.4.

Beta/Release Uplift Approval Request

  • User impact if declined: Some users are seeing random nasty visual corruptions on this driver. It goes away if they manually request a driver update, but for whatever reason windows won't automatically do it. We couldn't locally reproduce the issues, so this is the best we can do at the moment.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It blocks a single driver version from using hardware acceleration, so exactly those users will just get a slower version of firefox.
  • String changes made/needed:
Attachment #9100291 - Flags: approval-mozilla-beta?

Comment on attachment 9100291 [details]
Bug 1587155 - Block all hardware acceleration for AMD driver 22.19.162.4.

Blocks a particular driver, OK for uplift for the RC build.

Attachment #9100291 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

(In reply to Alexis Beingessner [:Gankra] from comment #8)

Hey darkspirit, you were able to reproduce some of the similar issues reported, right? Or were those just A Different But Similar Bug?

(Sorry!) Yes, everything I knew is in bug 1565663. (already in "see also")

Flags: needinfo?(jan)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: