Bug 1587155 - Block all hardware acceleration for AMD driver 22.19.162.4. r=jrmuizel a=lizzard

Driver's Haunted.

Differential Revision: https://phabricator.services.mozilla.com/D48900